--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-
 .example-icon {
   padding: 0 14px;
 }
 
-.example-spacer {
-  flex: 1 1 auto;
-}
-
-html, body, mat-sidenav-container, .content {
+html, body {
   margin: 0;
-  width: 100%;
-  height: 100%;
+  padding: 0;
 }
 
 .mat-tab-body-wrapper {
@@ -22,4 +16,5 @@ html, body, mat-sidenav-container, .content {
   https://material.angular.io/guide/customizing-component-styles
   */
   flex: 1;
+  flex-grow: 1;
 }
